# rust-mongo

./: .gitignore  Cargo.toml  img.py  index.html  readme.md
paper-web/: package-lock.json  package.json
paper-web/src/: App.js
paper-web/src/components/: Generate.js  InsertPaper.js  InsertUser.js  Layout.js  Newpaper.js  UpdateUser.js  generate_paper.js  paper_template.js  update_db.js
paper-web/src/utils/: newpaper.css
src/: helper.rs  main.rs  mongo.rs
