[package]
name = "rust-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
actix-web = "4"
actix-cors = "0.6.4"
actix-ws = "0.2.5"
actix-rt = "2.8.0"
serde_json = "1.0.93"
env_logger = "*"
log="0.4"